--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4819,6 +4819,7 @@ li.other-message strong {
 
 .message-controls button {
     padding: 5px;
+    min-height: 100% !important;
     height: 100%;
     min-height: 100%;
     background: none;
@@ -4836,6 +4837,10 @@ li.other-message strong {
     padding-bottom: 10px;
 }
 
+
+div#all-deals-container .faq_block__deal.faq_block-blur.brifs__button__create-faq_block__deal {
+    min-height: 266px;
+}
 .feed-date {
     color: rgb(136, 136, 136);
     font-family: Onest;
@@ -4870,14 +4875,14 @@ div#feed-posts-container {
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     -ms-flex-line-pack: start;
-        align-content: flex-start;
+    align-content: flex-start;
     -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    min-width: 700px;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    max-width: 700px;
     gap: var(--g10);
     padding: var(--p20);
     border-radius: var(--radius);
@@ -4920,15 +4925,15 @@ form#feed-form button {
     background: none;
     width: 50px;
     right: 10px;
-    top: 10px;
+    top: 6px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     min-height: 50px;
     padding: 7px;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     place-content: center;
     height: 50px !important;
 }
@@ -5028,4 +5033,22 @@ form#feed-form button {
 button.pin-message img {
     width: 15px;
     height: 15px;
+}/* Стили для плавной анимации FAQ */
+.faq_answer {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-in-out, padding 0.3s ease;
+}
+
+.faq_item.active .faq_answer {
+    max-height: 1000px; /* Достаточно большое значение, чтобы вместить контент */
+    padding: 20px;
+}
+
+.faq_question .arrow {
+    transition: transform 0.3s ease;
+}
+
+.faq_item.active .faq_question .arrow {
+    transform: rotate(180deg);
 }
