--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2811,7 +2811,7 @@ div#chat-message {
 .chat-box {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 0px;
-        flex: 1 1 0px;
+    flex: 1 1 0px;
     min-width: 300px;
     border-radius: 8px;
     display: -webkit-box;
@@ -2820,12 +2820,12 @@ div#chat-message {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
-        flex-direction: column;
-    height: 585px;
+    flex-direction: column;
+    /* height: 585px; */
     background: var(--blockbody);
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
 }
 
 .chat-header {
@@ -3548,21 +3548,24 @@ div#dealModal .modal-content div#modalBody form label {
 
 .modal__deal.show {
     -webkit-transform: translateY(0px);
-        -ms-transform: translateY(0px);
-            transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    transform: translateY(0px);
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     -ms-flex-line-pack: end;
-        align-content: flex-end;
+    align-content: center;
     height: 100%;
     -webkit-box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 14px 20px;
-            box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 14px 20px;
+    box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 14px 20px;
     bottom: 0px;
     top: 0px;
     width: 100%;
     -webkit-backdrop-filter: blur(3px);
-            backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
+    display: flex;
     background: rgba(0, 0, 0, 0.18) !important;
+    align-items: center;
+    justify-content: center;
 }
 
 .modal__deal {
@@ -3581,6 +3584,7 @@ div#dealModal .modal-content div#modalBody form label {
     height: -moz-max-content;
     height: max-content;
     max-height: 80%;
+    width: 80%;
     overflow: scroll;
     padding: 50px var(--p10) var(--p10) var(--p10);
     display: -webkit-box;
@@ -3589,8 +3593,8 @@ div#dealModal .modal-content div#modalBody form label {
     place-content: flex-end space-between;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
 }
 
 .modal__deal label {
@@ -4030,7 +4034,7 @@ form.create__deal_id {
 
 .form-group-deal {
     margin-bottom: 0px;
-    width: 100%;
+    width: 48%;
 }
 
 .form-group-deal label {
@@ -5033,7 +5037,7 @@ form#feed-form button {
 button.pin-message img {
     width: 15px;
     height: 15px;
-}/* Стили для плавной анимации FAQ */
+}/* ÃÂ¡Ã‘â€šÃÂ¸ÃÂ»ÃÂ¸ ÃÂ´ÃÂ»Ã‘Â ÃÂ¿ÃÂ»ÃÂ°ÃÂ²ÃÂ½ÃÂ¾ÃÂ¹ ÃÂ°ÃÂ½ÃÂ¸ÃÂ¼ÃÂ°Ã‘â€ ÃÂ¸ÃÂ¸ FAQ */
 .faq_answer {
     max-height: 0;
     overflow: hidden;
@@ -5041,7 +5045,7 @@ button.pin-message img {
 }
 
 .faq_item.active .faq_answer {
-    max-height: 1000px; /* Достаточно большое значение, чтобы вместить контент */
+    max-height: 1000px; /* Ãâ€ÃÂ¾Ã‘ÂÃ‘â€šÃÂ°Ã‘â€šÃÂ¾Ã‘â€¡ÃÂ½ÃÂ¾ ÃÂ±ÃÂ¾ÃÂ»Ã‘Å’Ã‘Ë†ÃÂ¾ÃÂµ ÃÂ·ÃÂ½ÃÂ°Ã‘â€¡ÃÂµÃÂ½ÃÂ¸ÃÂµ, Ã‘â€¡Ã‘â€šÃÂ¾ÃÂ±Ã‘â€¹ ÃÂ²ÃÂ¼ÃÂµÃ‘ÂÃ‘â€šÃÂ¸Ã‘â€šÃ‘Å’ ÃÂºÃÂ¾ÃÂ½Ã‘â€šÃÂµÃÂ½Ã‘â€š */
     padding: 20px;
 }
 
@@ -5051,4 +5055,7 @@ button.pin-message img {
 
 .faq_item.active .faq_question .arrow {
     transform: rotate(180deg);
+}
+.feed-form-post {
+    
 }
